SERVER-31543 add collection name and UUID to 'Document validators not allowed' error messages